# SLMcontroller

./: .gitignore  .readthedocs.yaml  Phase_pattern.py  README.md  SLM_pattern.pyproject  camera.py  opticalElement.py  pyproject.toml  quadqs_statistics.json  settings.py  setup.py  testcv.py  widget.py  widget.spec
SLMcontroller/: FourierWavefrontOptim.py  Lens.py  Meshing_process.py  SLM_controller.py  WavefrontOptim.py  settings.py
docs/: SLMcontroller.rst  calibration.rst  conf.py  examples.rst  howto.rst  index.rst  installation.rst  modules.rst  requirements.txt  settings.rst  src.rst
docs/_build/doctrees/: SLMcontroller.doctree  calibration.doctree  environment.pickle  examples.doctree  howto.doctree  index.doctree  installation.doctree  modules.doctree  settings.doctree  src.doctree
docs/_build/html/: .buildinfo  SLMcontroller.html  calibration.html  examples.html  genindex.html  howto.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  search.html  settings.html  (+2 more)
examples/: Spot_optim.ipynb
src/: FlatnessCorrection.py  FourierWavefrontOptim.py  Grating.py  Lens.py  Meshing_process.py  OpticalElement.py  Phase_pattern.py  Remote_control.py  WavefrontOptim.py  network.py  settings.py  utils.py
src/SLMcontroller/: AmplitudeMask.py  CameraFunctions.py  FlatnessCorrection.py  FourierWavefrontOptim.py  Grating.py  Lens.py  MainGUI.py  Meshing_process.py  OpticalElement.py  Phase_pattern.py  Remote_control.py  WavefrontOptim.py  Zernike.py  __init__.py  __main__.py  settings.py  utils.py
testing/: test_gmsh_parallel.py  testcv.py
(+48 files in other folders)
